# synapse

./: .gitignore  BACKLOG.md  Cargo.toml
crates/agent-claude/: Cargo.toml
crates/agent-claude/src/: main.rs
crates/agent-gemini/: Cargo.toml
crates/agent-gemini/src/: lib.rs  main.rs
crates/grpc-server/: Cargo.toml  build.rs
crates/grpc-server/src/: lib.rs  main.rs  server.rs  service.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: handler.rs  lib.rs  main.rs  server.rs
crates/mcp-server/src/tools/: context.rs  mod.rs  tasks.rs
crates/shared-types/: Cargo.toml
crates/shared-types/migrations/: 0001_audit_log.sql
crates/shared-types/src/: agent.rs  lib.rs  nats.rs  task.rs
crates/shared-types/src/storage/: mod.rs  redis_pool.rs  sqlite.rs
crates/tui/: Cargo.toml  build.rs
crates/tui/src/: main.rs
infra/docker/: Dockerfile.grpc-server  Dockerfile.mcp-server  Dockerfile.mock-agent  Dockerfile.tui-runner  docker-compose.e2e.yml  docker-compose.yml
infra/nats/: nats.conf
proto/: synapse.proto
