[workspace]
resolver = "2"
members = [
    "crates/shared-types",
    "crates/mcp-server",
    "crates/grpc-server",
    "crates/tui",
    "crates/agent-claude",
    "crates/agent-gemini",
]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
thiserror    = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
axum         = "0.8"
rmcp         = { version = "1", features = ["server", "transport-streamable-http-server", "schemars"] }
schemars     = "1"
async-nats   = "0.46"
bytes        = "1"
futures-util = "0.3"
tonic        = "0.14"
tonic-build  = "0.14"
tonic-prost       = "0.14"
tonic-prost-build = "0.14"
prost        = "0.14"
ratatui      = "0.30"
crossterm    = "0.29"
redis        = { version = "1", features = ["tokio-comp", "connection-manager"] }
sqlx         = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
rig-core     = "0.33"
async-trait  = "0.1"
tower        = "0.5"
tokio-util   = "0.7"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest            = { version = "0.12", features = ["json"] }
