[package]
name = "agent-claude"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-claude"
path = "src/main.rs"

[dependencies]
shared-types     = { path = "../shared-types" }
tokio            = { workspace = true }
anyhow           = { workspace = true }
async-trait      = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
