[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/main.rs"

[dependencies]
shared-types     = { path = "../shared-types" }
tokio            = { workspace = true }
anyhow           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tonic            = { workspace = true }
tonic-prost      = { workspace = true }
prost            = { workspace = true }
async-nats       = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
