[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "grpc_server"
path = "src/lib.rs"

[[bin]]
name = "grpc-server"
path = "src/main.rs"

[dependencies]
shared-types     = { path = "../shared-types" }
tokio            = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tonic            = { workspace = true }
tonic-prost      = { workspace = true }
prost            = { workspace = true }
async-nats       = { workspace = true }
futures-util     = { workspace = true }
tokio-util       = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
