[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
shared-types     = { path = "../shared-types" }
tokio            = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
axum             = { workspace = true }
rmcp             = { workspace = true }
schemars         = { workspace = true }
async-nats       = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tower            = { workspace = true }
tokio-util       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
