[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
redis        = { workspace = true }
sqlx         = { workspace = true }
async-nats   = { workspace = true }
bytes        = { workspace = true }
futures-util = { workspace = true }
